# OpenMBU-WebAPI

./: CMakeLists.txt
include/: mbu_auth.h
include/mbu_auth/: auth.hpp
include/openmbu_webapi/: account.hpp  status.hpp
libs/json/: CMakeLists.txt
libs/libcurl/lib/: libcurl_a_x64.lib  libcurl_a_x86.lib
src/: CMakeLists.txt
src/auth/: CMakeLists.txt  auth.cpp  util.hpp
src/example/: CMakeLists.txt  main.cpp
src/webapi/: CMakeLists.txt  account.cpp  util.cpp  util.hpp
